--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </table>
     <button id="gomb1">1/a</button>
     <button id="gomb2">1/b</button>
+    <button id="gomb2/b">1/b/2</button>
     <button id="gomb3">1/c</button>
     <table id="table2">
       <thead>
